<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_margin="30dp"
        android:gravity="bottom"
        android:src="@drawable/b_navi" />
    //강의동 리스트 레이아웃

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="233dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="5">

        <Button
            android:id="@+id/button01"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title01"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button02"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title02"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button03"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title03"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button04"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title04"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button05"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title05"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button06"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title06"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button07"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title07"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button08"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title08"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button09"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title09"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="98dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:background="#00ff0000"
            android:onClick="onClick"
            android:text="@string/title10"
            android:textSize="20sp" />


    </GridLayout>

    //밑에 부분 전체
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="112dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="식   당"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/res"
                    android:layout_width="63dp"
                    android:layout_height="75dp"
                    android:layout_gravity="bottom|center"
                    android:background="#00ff0000"
                    android:cropToPadding="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/b_restaurant" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="112dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="셔틀버스"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/bus"
                    android:layout_width="63dp"
                    android:layout_height="75dp"
                    android:layout_gravity="bottom|center"
                    android:background="#00ff0000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/b_busstop" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="158dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="강의동"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/lec"
                android:layout_width="63dp"
                android:layout_height="75dp"
                android:layout_gravity="bottom|center"
                android:background="#00ff0000"
                android:scaleType="fitCenter"
                android:src="@drawable/b_lecture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="112dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="기    타"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/etc"
                    android:layout_width="63dp"
                    android:layout_height="75dp"
                    android:layout_gravity="bottom|center"
                    android:background="#00ff0000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/b_etc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="112dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="즐겨찾기"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/favor"
                    android:layout_width="63dp"
                    android:layout_height="75dp"
                    android:layout_gravity="bottom|center"
                    android:background="#00ff0000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/b_favor" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>